fixes for newest builds

--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ http {
         }
 
         location /stat.xsl {
-                root /opt/nginx/conf/stat.xsl;
+                root /opt/nginx/conf/;
         }
 
         location /control {
